[package]
name = "teanet"
version = "0.2.1"
authors = ["Jake W. Ireland <jakewilliami@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["cargo", "wrap_help", "derive"] }
local-ip-address = "0.4.9"
tokio = { version = "1.21.2", features = ["full"] }
public-ip = "0.2.2"

